--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mongoose": "^8.10.0",
     "natural": "^8.0.1",
     "next": "15.1.0",
+    "nodemailer": "^7.0.3",
     "preline": "^2.7.0",
     "react": "^19.0.0",
     "react-datepicker": "^8.0.0",
@@ -66,6 +67,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/leaflet": "^1.9.15",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/react-speech-recognition": "^3.9.5",
