--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nlpjs/core": "^4.26.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.4",
+    "@stripe/stripe-js": "^7.4.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
@@ -57,6 +58,7 @@
     "react-speech-recognition": "^3.10.0",
     "react-toastify": "^11.0.2",
     "regenerator-runtime": "^0.14.1",
+    "stripe": "^18.2.1",
     "swr": "^2.3.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
