--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@next/swc-win32-x64-msvc": "^15.4.6",
     "@types/bcrypt": "^5.0.2",
     "@types/leaflet": "^1.9.15",
     "@types/node": "^20",
